--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@
     margin-bottom: 20px;
 }
 .header {
+    text-align: center;
     width: 100%;
     min-height: 200px;
     background-color: gainsboro;
