--- a/css/styles.css
+++ b/css/styles.css
@@ -14,9 +14,8 @@
 }
 .header {
     text-align: center;
-    width: 100%;
-    min-height: 200px;
     background-color: gainsboro;
+    padding: 40px;
 }
 .mid {
     display: flex;
