--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,17 @@
+@font-face {
+    src: url(fonts/overpass-regular.otf);
+    font-family: overpass;
+}
+@font-face {
+    src: url(fonts/overpass-extrabold.otf);
+    font-family: overpass;
+    font-weight: bold;
+}
+
 .page {
     font-size: 20px;
     color: rgb(85, 85, 85);
+    font-family: overpass;
 }
 .container {
     width: 1000px;
@@ -57,6 +68,7 @@ p {
     .page {
         color:rgb(153, 19, 146);
         background-color: rgb(255, 157, 247);
+        font-family: "Comic Sans MS", sans-serif;
     }
 
     .container {
