Added an additional media query as well as added Questions+Concerns content (#14)
* Reworked header css to better centerize the text

* Added two more suggestions under accessibility section

* Added link to the api we will be using

* Added media query that completely changes color

* Added fonts folder and applied Overpass font to page, Comic sans when width is 600px

* Added content under Questions + Concerns as well as made the site more mobile friendly when under 600px;

* Added one more media query that changes font type of site at max width 1024px

Co-authored-by: Farooq S <50603436+Faro0q@users.noreply.github.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,11 +73,21 @@ p {
 
     .container {
         background-color: rgb(255, 157, 247);
+        width: 100%;
+        height: 200vh;
     }
     .footer-container {
         background-color: rgb(219, 140, 250);
     }
     .footer-box {
+        margin-bottom: 15px;
+        width:auto;
+        background-color: rgb(201, 112, 236);
+    }
+
+    .footer-items {
+        display: inline;
+    }
         background-color: rgb(201, 112, 236);
     }
     .header {
@@ -85,5 +95,12 @@ p {
     }
     .mid-box {
         background-color: rgb(219, 140, 250);
+        width: 40%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    .page {
+        font-family: "Comic Sans MS", sans-serif;
     }
 }
